metadata-classic/objects/DisputeEventLog__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisputeOffer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dispute Offer</label>
        <referenceTo>DisputeOffer__c</referenceTo>
        <relationshipLabel>Dispute Event Logs</relationshipLabel>
        <relationshipName>DisputeEventLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dispute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dispute</label>
        <referenceTo>Dispute__c</referenceTo>
        <relationshipLabel>Dispute Event Logs</relationshipLabel>
        <relationshipName>DisputeEventLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventType__c</fullName>
        <label>Event Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmittedBy__c</fullName>
        <label>Submitted By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Dispute Event Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Dispute__c</columns>
        <columns>EventType__c</columns>
        <columns>SubmittedBy__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SCDE-{000000}</displayFormat>
        <label>Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dispute Event Logs</pluralLabel>
    <recordTypes>
        <fullName>EventLog</fullName>
        <active>true</active>
        <description>Record type used to manage the even log entries for a solution center dispute, dispute offer, or dispute message.</description>
        <label>Event Log</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>